# bulk-email-sender

./: .gitignore  LICENSE  README.md  config.py  data_loader.py  email_sender.py  main.py  pyproject.toml  test_config.py  worker.py
.github/workflows/: desktop-release.yml
apps/desktop/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/features/email-content/: EmailContentWorkspace.tsx
apps/desktop/src/features/recipients/: RecipientsWorkspace.tsx
apps/desktop/src/services/: backend.ts
assets/samples/: recipients_sample.json  recipients_sample.xlsx
attachments/: README.md
bulk_email_sender/: __init__.py  engine.py  legacy.py  message_builder.py  models.py  recipients_loader.py  runtime_packager.py  runtime_smoke.py  sent_store.py  smtp_client.py  template.py  worker.py
data/: teachers.json
examples/: README.md
scripts/qa/: real_email_config.example.env  run_full_checks.sh  smoke_local_smtp.py  smoke_real_email.py  smoke_worker_protocol.py
scripts/runtime/: build_runtime_bundle.py  create_mock_runtime.py  generate_local_manifest.py  prepare_local_smoke.py
tests/: test_engine_events.py  test_recipients_loader.py  test_runtime_packager.py  test_runtime_smoke.py  test_sent_store.py  test_smtp_client.py  test_smtp_integration.py  test_template_renderer.py  test_worker_protocol.py
(+2 files in other folders)
