[package]
name = "bulk-email-sender"
version = "0.1.0"
description = "Desktop UI for Bulk-Email-Sender"
authors = ["xin"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
